# reference-importer

./: .gitignore  README.md  ReferenceImporter.py  ReferenceImporterMain.py  __init__.py  main.py  package.py  pyproject.toml  test  ui.py
ReferenceImporter/: ReferenceImporterMain.py  __init__.py  imageSequence.py  validator.py
ReferenceImporter/reference_importer/: __init__.py
ReferenceImporter/ui/: main_dialog_ui.py
core/: __init__.py  image_sequencer.py  video_processor.py
core/dcc/: protocol.py
reference_importer/: __init__.py  imageSequence.py
reference_importer/ui/: __init__.py  main_dialog_ui.py
reference_importer_main/: imageSequence.py
reference_importer_main/ui/: main_dialog_ui.py
src/python/reference_importer/: __init__.py  main.py
src/python/reference_importer/_core/: __init__.py  video.py  video_processor.py
src/python/reference_importer/_core/dcc/: __init__.py  maya.py  protocol.py
src/python/reference_importer/core/: __init__.py  video_processor.py
src/python/reference_importer/core/dcc/: maya.py
src/qml/: main.qml
src/qml/components/: ExportPanel.qml  FileTextField.qml  TimecodeTextInput.qml  VideoPlayer.qml  VideoPositioner.qml  VideoRangeSlider.qml  qmldir
src/qml/controls/: Button.qml  FileDialogButton.qml  TextField.qml  qmldir
src/qml/style/: Style.qml
tests/: __init__.py  test_integration.py  test_video.py  test_video_processor.py
ui/: main_dialog.ui
