[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reference-importer"
version = "2.0.0"
requires-python = ">= 3.9"

authors = [
  {name = "Jaime Florian", email = "jaimeflorian27@gmail.com"}
]

dependencies = [
  "ffmpeg-python",
  "Qt.py",
  "PySide2==5.15.2.1"
]

[project.optional-dependencies]
dev = ["ruff<3.0.0"]
